--- a/task8/task8a.html
+++ b/task8/task8a.html
@@ -55,7 +55,7 @@
                         </ol> 
                         <!-- 轮播图片 -->
                         <div class="carousel-inner">
-                             <div class="item active"><img src="./image/Image3.png" alt="图一"></div>
+                             <div class="item active"><img src="./image/Image.png" alt="图一"></div>
                              <div class="item"><img src="./image/Image1.png" alt="图二"></div>
                              <div class="item"><img src="./image/Image2.png" alt="图三"></div>
                         </div>
