--- a/task8/task8c.html
+++ b/task8/task8c.html
@@ -110,7 +110,14 @@
                                                     <div class="colbox6">
                                                         提示:在你学习之前你应该已经掌握XXXXX、XXXXX、XX等语言基础
                                                         </div>
-                                                        
+                                                     <div class="yincang">
+                                                         <p class="p1">iOS工程师</p>
+                                                            <p class="p2">
+                                                                    iOS是由苹果公司开发的移动操作统，iOS与苹果的Mac OS X操作系统一样，也是以Darwin为基础的，因此同样属于类Unix的商业操作系统。
+                                                                    国内iOS开发起步相对较晚，人才培养机制更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源。
+                                                                    国内iOS开发起步相对较晚，人才培养机制更是远远跟不上市场发展速度。有限的iOS开发人才成了国内企业必争的资源。
+                                                            </p>
+                                                     </div>   
                                                 </div>
                                                                 <!-- 这是一个小块 -->
                                                 <div class="col-xs-4 col">
