--- a/task9/task9c.html
+++ b/task9/task9c.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./fonts/bootstrap.min.css"> 
     <script src="./fonts/jquery-2.1.4.min.js"></script>
     <script src="./fonts/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./task8c.css">
+    <link rel="stylesheet" href="./task9c.css">
 </head>
 <body>
         <div class="container-fluid">
@@ -26,18 +26,18 @@
                         <nav class="navbar  navtop" role="navigation">
                             <div></div>
                             <div class="navcontent">
-                                    <a class="a1" href="./task8a.1.html">
+                                    <a class="a1" href="./task9.html">
                                         <div class="navtips">首页</div>
                                         <div class="border"></div>
                                     </a>
-                                    <a class="a1" href="./task8c.1.html"><div class="navtips">职业</div>
+                                    <a class="a1" href="./task9c.html"><div class="navtips">职业</div>
                                         <div class="border"></div>
                                     </a>
-                                    <a class="a1" href="./task8c.1.html">
+                                    <a class="a1" href="./task9c.html">
                                             <div class="navtips">推荐</div>
                                             <div class="border"></div>
                                     </a>
-                                    <a class="a1" href="./task8b.1.html">
+                                    <a class="a1" href="./task9b.1.html">
                                             <div class="navtips">关于</div>
                                             <div class="border"></div>
                                     </a>
