--- a/task9/task9a.html
+++ b/task9/task9a.html
@@ -30,14 +30,14 @@
                             <div class="navtips">首页</div>
                             <div class="border"></div>
                         </a>
-                        <a class="a1" href="./task9c.html"><div class="navtips">职业</div>
+                        <a class="a1" href="./task9a.html"><div class="navtips">职业</div>
                             <div class="border"></div>
                         </a>
                         <a class="a1" href="./task9c.html">
                                 <div class="navtips">推荐</div>
                                 <div class="border"></div>
                         </a>
-                        <a class="a1" href="./task9b.html">
+                        <a class="a1" href="./task9b.css">
                                 <div class="navtips">关于</div>
                                 <div class="border"></div>
                         </a>
