--- a/task9/task9c.html
+++ b/task9/task9c.html
@@ -26,7 +26,7 @@
                         <nav class="navbar  navtop" role="navigation">
                             <div></div>
                             <div class="navcontent">
-                                    <a class="a1" href="./task9.html">
+                                    <a class="a1" href="./task9a.html">
                                         <div class="navtips">首页</div>
                                         <div class="border"></div>
                                     </a>
@@ -37,7 +37,7 @@
                                             <div class="navtips">推荐</div>
                                             <div class="border"></div>
                                     </a>
-                                    <a class="a1" href="./task9b.1.html">
+                                    <a class="a1" href="./task9b.html">
                                             <div class="navtips">关于</div>
                                             <div class="border"></div>
                                     </a>
