--- a/task9alter/task9a.html
+++ b/task9alter/task9a.html
@@ -57,9 +57,9 @@
                         </ol> 
                         <!-- 轮播图片 -->
                         <div class="carousel-inner">
-                             <div class="item active"><img src="./image/Image5.png" alt="图一"></div>
-                             <div class="item"><img src="./image/Image5.png" alt="图二"></div>
-                             <div class="item"><img src="./image/Image5.png" alt="图三"></div>
+                             <div class="item active"><img src="./image5.png" alt="图一"></div>
+                             <div class="item"><img src="./image5.png" alt="图二"></div>
+                             <div class="item"><img src="./image5.png" alt="图三"></div>
                         </div>
                             <!-- 左右按钮 -->
                             <a class="carousel-control left" href="#myslideshow" role="button" data-slide="prev">
