任务十一改

--- a/task11/task11.html
+++ b/task11/task11.html
@@ -11,7 +11,7 @@
     <script src="./boot/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
             <div class="top">
                     <button>关闭</button>
                     <span>登录</span>
@@ -37,6 +37,6 @@
                 </div>
             <button class="bt">登录</button>   <!-- 按钮中的文字自动居中 -->
             <a class="last-password" href="#"><span>忘记密码？</span></a>
-    </div>
+    <!-- </div> -->
 </body>
 </html>
