--- a/JS/task1/task1a.html
+++ b/JS/task1/task1a.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>闪方法二去重</title>
 </head>
 <style>
 
@@ -26,6 +26,7 @@ button {
     letter-spacing: 5px;
     color: orange;
     background-color: transparent;
+    outline: none;
 }
 </style>
 <body>
@@ -38,8 +39,8 @@ button {
         <div></div>
         <div></div>
         <div></div> 
-   <button id="topBtn" onclick="move()">kaishi</button>
-   <button id="buttomBtn" onclick="stopall()">jieshu</button>
+   <button id="topBtn" onclick="move()">闪吧</button>
+   <button id="buttomBtn" onclick="stopall()">停！</button>
    <script src="./demo7.js"></script>
 </body>
 </html>
